<resources>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connecting">Connecting…</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="auto_reconnect">Trying to reconnect</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_main">OSSW</string>

    <string name="action_find_watch">Connect to watch</string>

    <string name="action_run_ipantman">Run ipSensorMan</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="drawer_home_screen">Home screen</string>

    <string name="drawer_watch_faces">Watch faces</string>
    <string name="drawer_applications">Applications</string>
    <string name="drawer_utilities">Utilities</string>
    <string name="drawer_plugins">Extensions</string>
    <string name="drawer_watches">Watches</string>
    <string name="drawer_preview">Preview</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_exit">Exit</string>

    <string name="toast_watch_is_connected">Watch is connected</string>

    <string name="no_watch_found">No watch found.</string>
    <string name="no_extension_found">No extensions found, you can install them from Play Store.</string>
    <string name="toast_nothing_to_configure">Nothing to configure</string>
    <string name="toast_invalid_file">File is invalid</string>
    <string name="toast_file_uploaded_successfully">File was uploaded to the watch</string>
    <string name="no_watchsets_found">No watchsets found.</string>
    <string name="menu_import">Import</string>
    <string name="title_select_watch">Select watch</string>
    <string name="menu_watchset_reload">Reload</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_items_remove">Delete</string>
    <string name="menu_preview">Preview</string>
    <string name="menu_upload_to_watch">Upload</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_items_add">Add</string>
    <string name="menu_items_edit">Edit</string>
    <string name="action_close">Close</string>

    <string name="pref_title">Settings</string>
    <string name="pref_synchronize_time_title">Synchronize time</string>
    <string name="pref_synchronize_time_desc">Send current time to the watch when connected</string>
    <string name="select_font">Select font</string>
    <string name="pref_notification_category">Watch notifications</string>
    <string name="pref_phone_notification_category">Phone features</string>
    <string name="pref_notifications_title">Text notification</string>
    <string name="pref_notifications_desc">SMS, e-mail, missed call</string>
    <string name="pref_alert_notifications_title">Alert notification</string>
    <string name="pref_alert_notifications_desc">Incoming call, alarm clock</string>
    <string name="pref_notifications_font">Notification font</string>
    <string name="pref_dialog_font">Dialog font</string>
    <string name="pref_notifications_font_desc">Select font for notifications</string>
    <string name="pref_alert_notification_font">Alert notification font</string>
    <string name="pref_alert_notification_font_desc">Select font for alert notifications</string>
    <string name="pref_notifications_access_desc">Manage access to notifications</string>
    <string name="pref_notifications_access_title">Notification access</string>
    <string name="pref_disconnect_notif_title">Disconnection alert</string>
    <string name="pref_predefined_messages">Predefined messages</string>
    <string name="pref_google_tasks">Google tasks</string>
    <string name="pref_google_tasks_accounts">Active accounts</string>

    <string name="toast_not_supported_firmware">This firmware version is not supported. Upgrade to at least 0.4.0.</string>
    <string name="toast_file_upload_failed">Data upload failed</string>
    <string name="action_disconnect">Disconnect</string>

    <string name="vibration_category">Vibration</string>
    <string name="vibration_active_time">Vibration active time</string>
    <string name="vibration_repeat">Repeat vibration</string>
    <string name="vibration_duration">Duration in milliseconds</string>
    <string name="vibration_pattern">Vibration pattern</string>
    <string name="test_notification">Test notification</string>
    <string name="pref_notification_filter">Applications providing notifications</string>

    <string name="pref_reject_call_message">Reject call with SMS</string>
    <string name="predefined_message1">In a meeting, call you later.</string>
    <string name="predefined_message2">On my way.</string>
    <string name="predefined_message3">Will be in place in 10 minutes.</string>
    <string name="pref_phone_discovery_title">Phone discovery</string>
    <string name="pref_phone_discovery_audio_title">Audio track</string>
    <string name="pref_phone_discovery_file_uri">Nothing selected</string>
    <string name="notif_decline_call">Decline</string>
    <string name="notif_decline_call_sms">Decline+SMS</string>
    <string name="notif_mute_call">Mute</string>

    <string name="notification_permission_title">Need special permission for receiving notifications</string>
    <string name="notification_permission_button">Grant access</string>

    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="incall_title">Incoming call</string>

    <string name="time_interval_picker_ok">OK</string>
    <string name="time_interval_picker_cancel">Cancel</string>
    <string name="unknown_contact">Unknown</string>

    <string name="sms_title">Choose SMS</string>
    <string name="contact_title">Choose contact</string>
    <string name="tasks_title">Tasks</string>
    <string name="tasks_lists_title">Task lists</string>
    <string name="tasks_accounts_title">Accounts</string>
</resources>
