<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="synchronize_time"
        android:summary="@string/pref_synchronize_time_desc"
        android:title="@string/pref_synchronize_time_title" />

    <PreferenceCategory android:title="Notifications" />

    <ListPreference
        android:defaultValue="normalBold"
        android:dialogTitle="@string/select_font"
        android:entries="@array/notifications_font_keys"
        android:entryValues="@array/notification_font_values"
        android:key="notifications_font"
        android:summary="@string/pref_notifications_font_desc"
        android:title="@string/pref_notifications_font"></ListPreference>

    <PreferenceScreen
        android:summary="@string/pref_notifications_access_desc"
        android:title="@string/pref_notifications_access_title">
        <intent android:action="android.settings.ACTION_NOTIFICATION_LISTENER_SETTINGS" />
    </PreferenceScreen>

</PreferenceScreen>
