<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_add"
        android:orderInCategory="100"
        android:title="@string/menu_items_add"
        android:icon="@drawable/ic_add"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/menu_remove"
        android:orderInCategory="110"
        android:title="@string/menu_items_remove"
        android:icon="@drawable/ic_delete"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/menu_edit"
        android:orderInCategory="111"
        android:title="@string/menu_items_edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="always|withText" />
</menu>
